--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mavenmysqltransaction</groupId>
-    <artifactId>UrlWebService</artifactId>
+    <groupId>com.spt.urls</groupId>
+    <artifactId>UrlService</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
@@ -97,7 +97,7 @@
                 <!--<version>2.7.6</version>-->
                  <configuration>
 <!--                    <mainClass>${webService.ActuatorServiceApplication.class}</mainClass>-->
-                     <mainClass>${webService.DynamicUrlApplicationKt.class}</mainClass>
+                     <mainClass>${com.spt.urls.webService.DynamicUrlApplicationKt.class}</mainClass>
                     <layout>JAR</layout>
                 </configuration>
                 <executions>
