--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-parent</artifactId>
 <!--            <version>3.0.0</version>-->
-            <version>2.6.4</version>
+            <version>2.7.9</version>
             <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <properties>
@@ -36,8 +36,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-<!--            <version>8.0.31</version>-->
-            <version>5.1.45</version>
+            <version>8.0.31</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -49,13 +48,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web-services</artifactId>
             <!--<version>3.0.0</version>-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+                <exclusion>
+                    <!-- seems 'logback' doesn't work with slf4j. So we have to remove 'logback' dependencies at all-->
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        
-       
         <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter</artifactId>
-                <!--<version>3.0.0</version>-->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
         <dependency>
